@@ -72,16 +72,6 @@ int CursorEvent::getCursorID() const
     return m_ID;
 }
 
-DPoint CursorEvent::getLastDownPos() const
-{
-    return DPoint(m_LastDownPos);
-}
-
-void CursorEvent::setLastDownPos(const IntPoint& pos)
-{
-    m_LastDownPos = pos;
-}
-
 bool operator ==(const CursorEvent& event1, const CursorEvent& event2)
 {
     return (event1.m_Position == event2.m_Position && event1.m_When == event2.m_When); 
