@@ -76,10 +76,8 @@ namespace avg {
             bool m_Stale;
             int m_ID;
             StreamState m_State;
-            int m_VanishCounter;
             DPoint m_Pos;
             DPoint m_OldPos;
-            DPoint m_FirstPos;
             BlobPtr m_pBlob;
             long long m_Time;
             long long m_OldTime;
