@@ -45,7 +45,7 @@ class AVG_API TouchEvent: public CursorEvent
 {
     public:
         TouchEvent(int id, Type eventType, BlobPtr pBlob, const IntPoint& pos, 
-                Source source, const DPoint& speed, const IntPoint& lastDownPos);
+                Source source, const DPoint& speed);
         TouchEvent(int id, Type eventType, const IntPoint& pos, Source source, 
                 const DPoint& speed, double orientation, double area, 
                 double eccentricity, DPoint majorAxis, DPoint minorAxis);
