@@ -26,20 +26,13 @@ namespace avg {
 TouchStatus::TouchStatus(TouchEventPtr pEvent)
     : m_pEvent(pEvent),
       m_bFirstFrame(true),
-      m_LastDownPos(pEvent->getPos()),
       m_CursorID(pEvent->getCursorID())
 {
-    pEvent->setLastDownPos(IntPoint(pEvent->getPos()));
     m_pLastEvent = m_pEvent;
 }
 
 TouchStatus::~TouchStatus()
 {
-}
-
-const IntPoint& TouchStatus::getLastDownPos()
-{
-    return m_LastDownPos;
 }
 
 void TouchStatus::updateEvent(TouchEventPtr pEvent)
@@ -59,7 +52,6 @@ void TouchStatus::updateEvent(TouchEventPtr pEvent)
         m_pEvent = pEvent;
     }
     m_pEvent->setCursorID(m_CursorID);
-    m_pEvent->setLastDownPos(m_LastDownPos);
     m_pLastEvent = m_pEvent;
 }
 
