@@ -31,8 +31,6 @@ public:
     TouchStatus(TouchEventPtr pEvent);
     virtual ~TouchStatus();
 
-    const IntPoint& getLastDownPos();
-
     void updateEvent(TouchEventPtr pEvent);
     TouchEventPtr getEvent();
     TouchEventPtr getLastEvent();
@@ -42,7 +40,6 @@ private:
     TouchEventPtr m_pLastEvent;
     TouchEventPtr m_pUpEvent;
     bool m_bFirstFrame;
-    IntPoint m_LastDownPos;
     int m_CursorID;
 };
 
