@@ -208,9 +208,6 @@ class EventTestCase(AVGTestCase):
         def getMouseState():
             Event = Player.getMouseState()
             self.assert_(Event.pos == avg.Point2D(10,10))
-            self.assert_(Event.lastdownpos == avg.Point2D(10,10))
-            # Make sure we're getting a Point2D as return value.
-            self.assert_(Event.lastdownpos/2 == avg.Point2D(5, 5))
         
         self.loadEmptyScene()
         root = Player.getRootNode()
